--- a/advance assignment 2.ipynb
+++ b/advance assignment 2.ipynb
@@ -4,76 +4,127 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q1. What is the relationship between classes and modules?"
+    "1. What is the concept of an abstract superclass?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Ans: A Python class is like an outline/blueprint/mold for creating a new object. An object is anything that you wish to manipulate or change while working through the code. Every time a class object is instantiated, which is when we declare a variable, a new object is initiated from scratch\n",
+    "Ans: An abstract class/superclass can be considered as a blueprint for other classes. It allows you to create a set of methods that must be created within any child classes built from the abstract class. A class which contains one or more abstract methods is called an abstract class.\n",
     "\n",
-    "Whereas in Python, Modules are simply files with the . py extension containing Python code that can be imported inside another Python Program. In simple terms, we can consider a module to be the same as a code library or a file that contains a set of functions/Classes that you want to include in your application."
+    "Whereas an abstract method is a method that has a declaration but does not have an implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from abc import ABC, abstractmethod\n",
+    "class Polygon(ABC): # Abstract Class\n",
+    "    @abstractmethod\n",
+    "    def noofsides(self): # Abstract Method\n",
+    "        pass\n",
+    "class Triangle(Polygon):\n",
+    "    def noofsides(self):  # overriding abstract method in child class Triangle\n",
+    "        print(\"I have 3 sides\")\n",
+    "class Pentagon(Polygon):\n",
+    "    def noofsides(self): # overriding abstract method in child class Pentagon\n",
+    "        print(\"I have 5 sides\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q2. How do you make instances and classes?"
+    "2. What happens when a class statement&#39;s top level contains a basic assignment statement?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Ans: For creating a class instance. we call a class by its name and pass the arguments which its __init__ method accepts.\n",
+    "Ans: When a Class statement's top level contains a basic assignment statement, its usually treated as a class attribute or class level variable.\n",
     "\n",
-    "Example: vishwak = employee('Male',20000), Here vishwak is an instance of class employee with attriubutes 'Male' and 20000.\n",
+    "where as assignment statements inside methods are treated as instance attributes or local attributes.\n",
     "\n",
-    "Whereas for creating a class, we use the Class keyword. Class keyword is followed by classname and semicolon.\n",
+    "When an instance of a class is created a single copy of class attributes is maintained and shared to all instances of class. where as each instance object maintains its own copy of instance variables."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "Example: Here Employee is a class created with class keyword with arguments gender and salary.\n",
-    "\n",
-    "class Employee:\n",
-    "    def __init__(self, gender,salary):\n",
-    "        self.gender = gender\n",
-    "        self.salary = salary"
+    "class Person:\n",
+    "    species = 'Homesapiens' # class attribute\n",
+    "    def __init__(self,name,gender):\n",
+    "        self.name = name # instance attributes\n",
+    "        self.gender = gender\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q3. Where and how should be class attributes created?"
+    "3. Why does a class need to manually call a superclass&#39;s __init__ method?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Ans: Class attributes or Class level Attributes belong to the class itself. these attributes will be shared by all the instances of the class. Hence these attributes are usually created/defined in the top of class definiation outside all methods.\n",
-    "\n",
-    "Example: In the below code we are defining a class attribute called no_of_wheels which will be shared by all the instances of the class Car\n",
-    "\n",
-    "class Car:\n",
-    "    no_of_wheels = 4; # this is a class attribute\n",
-    "    def __init__(self,color,price,engine):\n",
-    "        self.color = color # All this are instance attributes\n",
-    "        self.price = price\n",
-    "        self.engine = engine"
+    "Ans: if a child class has __init__ method, then it will not inherit the __init__ method of the parent class. in other words the __init__ method of the child class overrides the __init__ method of the parent class. so we have to manually call a parent superclass's __init__ using super() method\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Vivek', 'age': 28, 'salary': 20000}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age       \n",
+    "class Employee(Person):\n",
+    "    def __init__(self,name,age,salary):\n",
+    "        super().__init__(name,age)\n",
+    "        self.salary = salary\n",
+    "emp_1 = Employee('Vivek',28,20000)\n",
+    "print(emp_1.__dict__)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q4. Where and how are instance attributes created?"
+    "4. How can you augment, instead of completely replacing, an inherited method?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Ans: Instances attributes are passed to the class when an object of the class is created. Unlike class attributes, instance attributes are not shared by all objects of the classs. instead each object maintains its own copy of instance attributes at object level. whereas incase of class attributes all instances of class refer to a single copy. Usually instance attributes are defined within the __init__ method of class\n",
     "\n",
@@ -82,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,26 +144,30 @@
     "        self.engine = engine\n",
     "\n",
     "nexon_ev = Car('Indigo Blue', 1400000, 'electric')\n",
-    "safari = Car('Pearl White',2100000, 'petrol')"
+    "safari = Car('Pearl White',2100000, 'petrol')\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Q5. What does the term &quot;self&quot; in a Python class mean?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: self represents the instance of the class (it represents the object itself). By using the “self” keyword we can access the attributes and methods of the class with in the class in python. It binds the attributes with the given arguments."
+    "5. How is the local scope of a class different from that of a function?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Ans: self represents the instance of the class (it represents the object itself). By using the “self” keyword we can access the attributes and methods of the class with in the class in python. It binds the attributes with the given arguments.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,15 +194,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Q6. How does a Python class handle operator overloading?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Ans: Python Classes handle operator overloading by using special methods called Magic methods. these special methods usually begin and end with __ (double underscore)\n",
     "Example: Magic methods for basic arithmetic operators are:\n",
@@ -155,23 +214,7 @@
     "+ -> __add__()\n",
     "- -> __sub__()\n",
     "* -> __mul__()\n",
-    "/ -> __div__()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The total number of pages in 2 books is 300\n"
-     ]
-    }
-   ],
-   "source": [
+    "/ -> __div__()\n",
     "class Book:\n",
     "    def __init__(self,pages):\n",
     "        self.pages = pages\n",
@@ -183,29 +226,37 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Q7. When do you consider allowing operator overloading of your classes?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Ans: When we want to have different meaning for the same operator accroding to the context we use operator overloading."
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Q8. What is the most popular form of operator overloading?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Ans: The most popular form of operator overloading in python is by special methods called Magic methods. Which usually beign and end with double underscore __<method name>__.\n",
     "\n",
@@ -223,15 +274,19 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Q9. What are the two most important concepts to grasp in order to comprehend Python OOP code?"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "Ans: Classes and objects are the two concepts to comprehend python OOP code as more formally objects are entities that represent instances of general abstract concept called class\n",
     "\n",
@@ -242,13 +297,6 @@
     "Polymorphism\n",
     "Encapsulation"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
