--- a/advance assignment 3.ipynb
+++ b/advance assignment 3.ipynb
@@ -2,27 +2,30 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "55846da8",
    "metadata": {},
    "source": [
-    "1. What is the concept of an abstract superclass?"
+    "# Assignment 03 Solutions"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
+   "id": "6d38e68b",
    "metadata": {},
    "source": [
-    "Ans: An abstract class/superclass can be considered as a blueprint for other classes. It allows you to create a set of methods that must be created within any child classes built from the abstract class. A class which contains one or more abstract methods is called an abstract class.\n",
+    "#### 1. What is the concept of an abstract superclass?\n",
+    "**Ans:** An abstract class/superclass can be considered as a blueprint for other classes. It allows you to create a set of methods that must be created within any child classes built from the abstract class. A class which contains one or more abstract methods is called an abstract class.\n",
     "\n",
     "Whereas an abstract method is a method that has a declaration but does not have an implementation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "id": "00e14ca4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "from abc import ABC, abstractmethod\n",
     "class Polygon(ABC): # Abstract Class\n",
     "    @abstractmethod\n",
@@ -38,16 +41,11 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e4a49a25",
    "metadata": {},
    "source": [
-    "2. What happens when a class statement&#39;s top level contains a basic assignment statement?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: When a Class statement's top level contains a basic assignment statement, its usually treated as a class attribute or class level variable.\n",
+    "#### 2. What happens when a class statement's top level contains a basic assignment statement?\n",
+    "**Ans:** When a Class statement's top level contains a basic assignment statement, its usually treated as a class attribute or class level variable. \n",
     "\n",
     "where as assignment statements inside methods are treated as instance attributes or local attributes.\n",
     "\n",
@@ -56,35 +54,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
+   "id": "c5d88b4d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "class Person:\n",
     "    species = 'Homesapiens' # class attribute\n",
     "    def __init__(self,name,gender):\n",
     "        self.name = name # instance attributes\n",
-    "        self.gender = gender\n"
+    "        self.gender = gender"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "beb231b3",
    "metadata": {},
    "source": [
-    "3. Why does a class need to manually call a superclass&#39;s __init__ method?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: if a child class has __init__ method, then it will not inherit the __init__ method of the parent class. in other words the __init__ method of the child class overrides the __init__ method of the parent class. so we have to manually call a parent superclass's __init__ using super() method\n"
+    "#### 3. Why does a class need to manually call a superclass's __init__ method?\n",
+    "**Ans:** if a child class has **`__init__`** method, then it will not inherit the **`__init__`** method of the parent class. in other words the **`__init__`** method of the child class overrides the **`__init__`** method of the parent class. so we have to manually call a parent superclass's **`__init__`** using **`super()`** method"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
+   "id": "d30162f0",
    "metadata": {},
    "outputs": [
     {
@@ -110,21 +104,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f7468111",
    "metadata": {},
    "source": [
-    "4. How can you augment, instead of completely replacing, an inherited method?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: super() method can be used to augment, instead of completely replacing, an inherited method."
+    "#### 4. How can you augment, instead of completely replacing, an inherited method?\n",
+    "**Ans:** **`super()`** method can be used to augment, instead of completely replacing, an inherited method."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "id": "437bf527",
    "metadata": {},
    "outputs": [
     {
@@ -145,28 +135,24 @@
     "        super().__init__(name,gender) \n",
     "        self.salary = salary\n",
     "emp_1 = Employee('Vivek','Male',10000)\n",
-    "print(emp_1.__dict__)    "
+    "print(emp_1.__dict__)       "
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "16559793",
    "metadata": {},
    "source": [
-    "5. How is the local scope of a class different from that of a function?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: A Variable which is defined inside a function is local to that function. it is accesible from the point at which it is defined until the end of the function, and exists for as long as the function is existing.\n",
+    "#### 5. How is the local scope of a class different from that of a function?\n",
+    "**Ans:** A Variable which is defined inside a function is local to that function. it is accesible from the point at which it is defined until the end of the function, and exists for as long as the function is existing.\n",
     "\n",
-    "Similary a variable inside of a class also has a local variable scope. Variables which are defined in the class body (but outside all methods) are called as class level variables or class attributes. they can be referenced by there bare names within the same scope, but they can also be accessed from outside this scope if we use the attribute access operator (.). on a class or an instance of the class.\n"
+    "Similary a variable inside of a class also has a local variable scope. Variables which are defined in the class body (but outside all methods) are called as class level variables or class attributes. they can be referenced by there bare names within the same scope, but they can also be accessed from outside this scope if we use the attribute access operator `(.)`. on a class or an instance of the class."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
+   "id": "1d9896b9",
    "metadata": {},
    "outputs": [
     {
@@ -196,15 +182,8 @@
     "        pass\n",
     "print(Person.species) # Accessing species using class name\n",
     "Male = Person()\n",
-    "print(Male.species) "
+    "print(Male.species) # Accessing species using instance of class"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -223,9 +202,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
