--- a/advance assignment 4.ipynb
+++ b/advance assignment 4.ipynb
@@ -2,24 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "83640f69",
    "metadata": {},
    "source": [
-    "Q1. Which two operator overloading methods can you use in your classes to support iteration?"
+    "# Assignment 04 Solutions"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
+   "id": "4c06fa86",
    "metadata": {},
    "source": [
-    "Ans: __iter__ and __next__ are the operator overloading methods in python that support iteration and are collectively called iterator protocol.\n",
+    "#### Q1. Which two operator overloading methods can you use in your classes to support iteration?\n",
+    "**Ans:** **`__iter__`** and **`__next__`** are the operator overloading methods in python that support iteration and are collectively called iterator protocol.\n",
     "\n",
-    "__iter__ returns the iterator object and is called at the start of loop in our respective class.\n",
-    "__next__ is called at each loop increment, it returns the incremented value. Also Stopiteration is raised when there is no value to return."
+    "- **`__iter__`** returns the iterator object and is called at the start of loop in our respective class.\n",
+    "- **`__next__`** is called at each loop increment, it returns the incremented value. Also Stopiteration is raised when there is no value to return."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
+   "id": "90a386ed",
    "metadata": {},
    "outputs": [
     {
@@ -49,38 +53,33 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b3e5985",
    "metadata": {},
    "source": [
-    "Q2. In what contexts do the two operator overloading methods manage printing?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: __str__ and __repr__ are two operator overloading methods that manage printing.\n",
-    "\n",
-    "In Short, the difference between both these operators is the goal of __repr__ is to be unambiguous and __str__ is to be readable.\n",
-    "Whenever we are printing any object reference internally __str__ method will be called by default.\n",
-    "The main purpose of __str__ is for readability. it prints the informal string representation of an object, one that is useful for printing the object. it may not be possible to convert result string to original object.\n",
-    "__repr__ is used to print official string representation of an object, so it includes all information and development."
+    "#### Q2. In what contexts do the two operator overloading methods manage printing?\n",
+    "**Ans:** **`__str__`** and **`__repr__`** are two operator overloading methods that manage printing.\n",
+    "- In Short, the difference between both these operators is the goal of **`__repr__`** is to be unambiguous and **`__str__`** is to be readable.\n",
+    "- Whenever we are printing any object reference internally **`__str__`** method will be called by default.\n",
+    "- The main purpose of **`__str__`** is for readability. it prints the informal string representation of an object, one that is useful for printing the object. it may not be possible to convert result string to original object.\n",
+    "- **`__repr__`** is used to print official string representation of an object, so it includes all information and development."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
+   "id": "8b12d86a",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<__main__.Student object at 0x000002116566D490>\n",
+      "<__main__.Student object at 0x000001FDD5B05518>\n",
       "Student Name: Mano and Roll No: 1\n",
-      "2021-12-25 19:47:04.881845\n",
+      "2021-11-20 18:13:47.885746\n",
       "Unable to convert back to original object\n",
-      "datetime.datetime(2021, 12, 25, 19, 47, 4, 881845)\n",
-      "2021-12-25 19:47:04.881845\n"
+      "datetime.datetime(2021, 11, 20, 18, 13, 47, 885746)\n",
+      "2021-11-20 18:13:47.885746\n"
      ]
     }
    ],
@@ -102,6 +101,7 @@
     "    \n",
     "s1 = Student(\"Mano\",1)\n",
     "print(str(s1))\n",
+    "\n",
     "import datetime\n",
     "today = datetime.datetime.now()\n",
     "\n",
@@ -118,37 +118,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "776e9c16",
    "metadata": {},
    "source": [
-    "Q3. In a class, how do you intercept slice operations?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: In a class use of slice() in __getitem__ method is used for intercept slice operation. This slice method is provided with start integer number, stop integer number and step integer number.\n",
+    "#### Q3. In a class, how do you intercept slice operations?\n",
+    "**Ans:** In a class use of `slice()` in `__getitem__` method is used for intercept slice operation. This slice method is provided with start integer number, stop integer number and step integer number. \n",
     "\n",
-    "Example: __getitem__(slice(start,stop,step))"
+    "**Example:** `__getitem__(slice(start,stop,step))`"
    ]
   },
   {
    "cell_type": "markdown",
+   "id": "1960c808",
    "metadata": {},
    "source": [
-    "Q4. In a class, how do you capture in-place addition?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: a+b is normal addition. Whereas a+=b is inplace addition operation. In this in-place addition a itself will store the value of addition. In a class __iadd__ method is used for this in-place operation"
+    "#### Q4. In a class, how do you capture in-place addition?\n",
+    "**Ans:** **`a+b`** is normal addition. Whereas **`a+=b`** is inplace addition operation. In this in-place addition **`a`** itself will store the value of addition. In a class **`__iadd__`** method is used for this in-place operation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
+   "id": "89e37d51",
    "metadata": {},
    "outputs": [
     {
@@ -175,21 +166,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "341416c2",
    "metadata": {},
    "source": [
-    "Q5. When is it appropriate to use operator overloading?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: Operator overloading is used when we want to use an operator other than its normal operation to have different meaning according to the context required in user defined function."
+    "#### Q5. When is it appropriate to use operator overloading?\n",
+    "**Ans:** Operator overloading is used when we want to use an operator other than its normal operation to have different meaning according to the context required in user defined function."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
+   "id": "14b44902",
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +188,6 @@
     }
    ],
    "source": [
-    "\n",
     "class Book:\n",
     "    def __init__(self,pages):\n",
     "        self.pages = pages\n",
@@ -211,13 +197,6 @@
     "b2 = Book(200)\n",
     "print(f'Total Number of Pages -> {b1+b2}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -236,9 +215,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
