--- a/advance assignment 5.ipynb
+++ b/advance assignment 5.ipynb
@@ -2,21 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "a8e2fc40",
    "metadata": {},
    "source": [
-    "Q1. What is the meaning of multiple inheritance?"
+    "# Assignment 05 Solutions"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
+   "id": "3ae2f846",
    "metadata": {},
    "source": [
-    "Ans: Inheritence is nothing but reusing the code of Parent class by the child class. Similary when a child class inherits its properties from multiple Parent classes this scenario is called Multiple Inheritence"
+    "#### Q1. What is the meaning of multiple inheritance?\n",
+    "**Ans:** Inheritence is nothing but reusing the code of Parent class by the child class. Similary when a child class inherits its properties from multiple Parent classes this scenario is called **Multiple Inheritence**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
+   "id": "e8567eae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,16 +34,11 @@
   },
   {
    "cell_type": "markdown",
+   "id": "38440f4c",
    "metadata": {},
    "source": [
-    "Q2. What is the concept of delegation?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: Delegation provides a proxy object for any class thay you want on top of the main class. its like a wrapper to your class so that you can access limited resources of the main class.\n",
+    "#### Q2. What is the concept of delegation?\n",
+    "**Ans:** Delegation provides a proxy object for any class thay you want on top of the main class. its like a wrapper to your class so that you can access limited resources of the main class.\n",
     "\n",
     "it Wraps the object of main class into a smaller object with limited access\n",
     "\n",
@@ -48,7 +47,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
+   "id": "d57e9c12",
    "metadata": {},
    "outputs": [
     {
@@ -84,21 +84,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4600a4d4",
    "metadata": {},
    "source": [
-    "Q3. What is the concept of composition?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: In the concept of Composition, a class refers to one or more other classes by using instances of those classes as a instance variable. irrespective of inheritence in this approach all the parent class members are not inherited into child class, but only required methods from a class are used by using class instances."
+    "#### Q3. What is the concept of composition?\n",
+    "**Ans:** In the concept of Composition, a class refers to one or more other classes by using instances of those classes as a instance variable. irrespective of inheritence in this approach all the parent class members are not inherited into child class, but only required methods from a class are used by using class instances."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
+   "id": "7e779e32",
    "metadata": {},
    "outputs": [
     {
@@ -130,21 +126,17 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ce7913c2",
    "metadata": {},
    "source": [
-    "Q4. What are bound methods and how do we use them?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: If a function is an attribute of class and it is accessed via the instances, they are called bound methods. A bound method is one that has self as its first argument. Since these are dependent on the instance of classes, these are also known as instance methods."
+    "#### Q4. What are bound methods and how do we use them?\n",
+    "**Ans:** If a function is an attribute of class and it is accessed via the instances, they are called **bound methods**. A bound method is one that has **`self`** as its first argument. Since these are dependent on the instance of classes, these are also known as **instance methods**."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
+   "id": "dc8b18a8",
    "metadata": {},
    "outputs": [
     {
@@ -178,23 +170,19 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04f059af",
    "metadata": {},
    "source": [
-    "Q5. What is the purpose of pseudoprivate attributes?"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": [
-    "Ans: Pseudoprivate attributes are also useful in larger frameworks or tools, both to avoid introducing new method names that might accidentally hide definitions elsewhere in the class tree and to reduce the chance of internal methods being replaced by names defined lower in the tree. If a method is intended for use only within a class that may be mixed into other classes, the double underscore prefix ensures that the method won't interfere with other names in the tree, especially in multiple-inheritance scenarios\n",
+    "#### Q5. What is the purpose of pseudoprivate attributes?\n",
+    "**Ans:** Pseudoprivate attributes are also useful in larger frameworks or tools, both to avoid introducing new method names that might accidentally hide definitions elsewhere in the class tree and to reduce the chance of internal methods being replaced by names defined lower in the tree. If a method is intended for use only within a class that may be mixed into other classes, the double underscore prefix ensures that the method won't interfere with other names in the tree, especially in multiple-inheritance scenarios\n",
     "\n",
     "Pseudoprivate names also prevent subclasses from accidentally redefining the internal method's names,"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
+   "id": "6710d4ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,13 +201,6 @@
     "    def __init__(self):\n",
     "        self.method = 99"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -238,9 +219,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
